[gd_scene load_steps=2 format=3 uid="uid://gx25hb7eiwyc"]

[ext_resource type="Script" path="res://public/gui_panels/tab_resources.gd" id="1_f7hkn"]

[node name="TabResources" type="MarginContainer"]
offset_right = 289.0
offset_bottom = 23.0
size_flags_horizontal = 3
script = ExtResource("1_f7hkn")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="CompositionsVBox" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MissingLabel" type="Label" parent="."]
layout_mode = 2
text = "LABEL_NO_RESOURCES_PARENTHESIS"
horizontal_alignment = 1
vertical_alignment = 1
